--- a/index.html
+++ b/index.html
@@ -569,7 +569,8 @@ https://templatemo.com/tm-518-sentra
                 </div>
             </section>
             <section id="blog1" class="conent-section">
-                <iframe src="projects\frontend\ttt" width="100%" height="400px" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe src="projects\frontend\ttt" width="50%" height="400px" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe src="projects\frontend\funa" width="50%" height="400px" frameborder="0" style="border:0" allowfullscreen></iframe>
             </section>
             <section id="contact" class="content-section">
                 <div id="map">
